--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity" tools:ignore="ExtraText">
 
-    /*TARGETS*/
+    /*SOURCES*/
 
     <ImageView
             android:layout_width="110dp"
@@ -19,21 +19,59 @@
             android:contentDescription="@string/jap_a" android:onClick="onClickSRC1"/>
     <ImageView
             android:layout_width="110dp"
+            android:layout_height="65dp" app:srcCompat="@drawable/jap_i" android:id="@+id/src2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
+            app:layout_constraintVertical_bias="0.397" tools:srcCompat="@drawable/jap_i"
+            android:contentDescription="@string/jap_i" android:onClick="onClickSRC2"/>
+    <ImageView
+            android:layout_width="110dp"
+            android:layout_height="65dp" app:srcCompat="@drawable/jap_u" android:id="@+id/src3"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
+            app:layout_constraintVertical_bias="0.506" tools:srcCompat="@drawable/jap_u"
+            android:contentDescription="@string/jap_u" android:onClick="onClickSRC3"/>
+    <ImageView
+            android:layout_width="110dp"
+            android:layout_height="65dp" app:srcCompat="@drawable/jap_e" android:id="@+id/src4"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
+            app:layout_constraintVertical_bias="0.617" tools:srcCompat="@drawable/jap_e"
+            android:contentDescription="@string/jap_e" android:onClick="onClickSRC4"/>
+    <ImageView
+            android:layout_width="110dp"
             android:layout_height="65dp" app:srcCompat="@drawable/jap_o" android:id="@+id/src5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
             app:layout_constraintVertical_bias="0.725" tools:srcCompat="@drawable/jap_o"
             android:contentDescription="@string/jap_o" android:onClick="onClickSRC5"/>
+
+
+    /*TARGETS*/
+
+
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg5"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.725" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.287" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
             android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
+            android:contentDescription="@string/empty_box" android:onClick="onClickTRG1"/>
+    <ImageView
+            android:layout_width="110dp"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.397" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
+            android:background="#00000000" app:srcCompat="@drawable/empty_box"
+            android:contentDescription="@string/empty_box" android:onClick="onClickTRG2"/>
     <ImageView
             android:layout_width="110dp"
             android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg3"
@@ -52,48 +90,21 @@
             app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
             android:background="#00000000" app:srcCompat="@drawable/empty_box"
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG4"/>
+
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/jap_i" android:id="@+id/src2"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
-            app:layout_constraintVertical_bias="0.397" tools:srcCompat="@drawable/jap_i"
-            android:contentDescription="@string/jap_i" android:onClick="onClickSRC2"/>
-    <ImageView
-            android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.397" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.725" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
             android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG2"/>
-    <ImageView
-            android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/jap_u" android:id="@+id/src3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
-            app:layout_constraintVertical_bias="0.506" tools:srcCompat="@drawable/jap_u"
-            android:contentDescription="@string/jap_u" android:onClick="onClickSRC3"/>
-    <ImageView
-            android:layout_width="110dp"
-            android:layout_height="60dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.287" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG1"/>
-    <ImageView
-            android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/jap_e" android:id="@+id/src4"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
-            app:layout_constraintVertical_bias="0.617" tools:srcCompat="@drawable/jap_e"
-            android:contentDescription="@string/jap_e" android:onClick="onClickSRC4"/>
+            android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
+
+
+    /*OTHER*/
+
+
     <ImageView
             android:layout_width="200dp"
             android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button"
@@ -106,24 +117,23 @@
             app:layout_constraintHorizontal_bias="0.497"/>
     <ImageView
             android:layout_width="213dp"
-            android:layout_height="62dp" tools:srcCompat="@drawable/try_again_button" android:id="@+id/check_button2"
+            android:layout_height="62dp" tools:srcCompat="@drawable/try_again_button" android:id="@+id/try_again_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.852" app:layout_constraintStart_toStartOf="parent"
             android:visibility="visible" tools:visibility="visible"
             android:background="#00000000" app:srcCompat="@drawable/try_again_button"
-            android:contentDescription="@string/check_button" android:onClick="onClickCheck"
-    />
+            android:contentDescription="@string/try_again_button" android:onClick="onClickTryAgain"/>
     <ImageView
             android:layout_width="386dp"
-            android:layout_height="21dp" app:srcCompat="@drawable/topbar" android:id="@+id/imageView"
+            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintVertical_bias="0.0"/>
     <ImageView
             android:layout_width="245dp"
-            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/imageView3"
+            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/screen_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
