--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,5 +138,19 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.147"/>
+    <ImageView
+            android:layout_width="47dp"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
+            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"/>
+    <ImageView
+            android:layout_width="63dp"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
+            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
