--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,14 +114,14 @@
             app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
     <ImageView
             android:layout_width="63dp"
-            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
             app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
     <ImageView
             android:layout_width="47dp"
-            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
@@ -129,7 +129,7 @@
             android:onClick="onClickBackArrow"/>
     <ImageView
             android:layout_width="245dp"
-            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/screen_text"
+            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/hiragana_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
