--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -16,42 +16,60 @@
             app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
     <ImageView
             android:layout_width="63dp"
-            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
             app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
     <ImageView
             android:layout_width="47dp"
-            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
             app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
             android:onClick="onClickBackButton"/>
     <ImageView
-            android:layout_width="192dp"
-            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_vowels_button" android:id="@+id/imageView"
+            android:layout_width="416dp"
+            android:layout_height="110dp" app:srcCompat="@drawable/navigation_bar" android:id="@+id/navigation_bar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.054"
-            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/back_arrow_button"
             android:onClick="onClickHiraganaButton"/>
     <ImageView
-            android:layout_width="192dp"
-            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_ks_button" android:id="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.972"
-            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
-            android:onClick="onClickBackArrow"/>
-    <ImageView
             android:layout_width="412dp"
-            android:layout_height="145dp" app:srcCompat="@drawable/hiragana_home" android:id="@+id/screen_text"
+            android:layout_height="145dp" app:srcCompat="@drawable/hiragana_home" android:id="@+id/hiragana_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.152" android:contentDescription="@string/hiragana_vowels"
             app:layout_constraintHorizontal_bias="0.666"/>
+    <ScrollView
+            android:layout_width="342dp"
+            android:layout_height="359dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/navigation_bar"
+            app:layout_constraintVertical_bias="0.66">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                      android:orientation="vertical">
+            <ImageView
+                    android:layout_width="338dp"
+                    android:layout_height="81dp" app:srcCompat="@drawable/hiragana_vowels_button"
+                    android:id="@+id/vowels_button"
+                    android:contentDescription="@string/back_arrow_button"
+                    android:onClick="onClickHiraganaButton"/>
+            <ImageView
+                    android:layout_width="338dp"
+                    android:layout_height="81dp" app:srcCompat="@drawable/hiragana_ks_button"
+                    android:id="@+id/ks_button"
+                    android:contentDescription="@string/back_arrow_button"/>
+            <ImageView
+                    android:layout_width="338dp"
+                    android:layout_height="81dp" app:srcCompat="@drawable/hiragana_ss_button"
+                    android:id="@+id/ss_button"
+                    android:contentDescription="@string/back_arrow_button"/>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
