--- a/app/src/main/res/layout/activity_hiragana_ks.xml
+++ b/app/src/main/res/layout/activity_hiragana_ks.xml
@@ -9,7 +9,7 @@
 
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ka" android:id="@+id/src"
+            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ka" android:id="@+id/src1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
@@ -17,7 +17,7 @@
             android:contentDescription="@string/jap_a" android:onClick="onClickSRC1"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ki" android:id="@+id/src6"
+            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ki" android:id="@+id/src2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
@@ -25,7 +25,7 @@
             android:contentDescription="@string/jap_i" android:onClick="onClickSRC2"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ku" android:id="@+id/src7"
+            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ku" android:id="@+id/src3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
@@ -33,7 +33,7 @@
             android:contentDescription="@string/jap_u" android:onClick="onClickSRC3"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ke" android:id="@+id/src8"
+            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ke" android:id="@+id/src4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
@@ -41,7 +41,7 @@
             android:contentDescription="@string/jap_e" android:onClick="onClickSRC4"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ko" android:id="@+id/src9"
+            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ko" android:id="@+id/src5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
@@ -49,7 +49,7 @@
             android:contentDescription="@string/jap_o" android:onClick="onClickSRC5"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.287" app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG1"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg6"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.397" app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG2"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg7"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.506" app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG3"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg8"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.617" app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG4"/>
     <ImageView
             android:layout_width="110dp"
-            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg9"
+            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.725" app:layout_constraintStart_toStartOf="parent"
@@ -94,21 +94,21 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
     <ImageView
             android:layout_width="386dp"
-            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar2"
+            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
     <ImageView
             android:layout_width="63dp"
-            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image2"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
             app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
     <ImageView
             android:layout_width="47dp"
-            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button2"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
@@ -116,7 +116,7 @@
             android:onClick="onClickBackArrow"/>
     <ImageView
             android:layout_width="277dp"
-            android:layout_height="75dp" app:srcCompat="@drawable/hiragana_ks" android:id="@+id/hiragana_text2"
+            android:layout_height="75dp" app:srcCompat="@drawable/hiragana_ks" android:id="@+id/hiragana_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
     <ImageView
             android:layout_width="213dp"
             android:layout_height="62dp" tools:srcCompat="@drawable/try_again_button"
-            android:id="@+id/try_again_button2"
+            android:id="@+id/try_again_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.852" app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
             android:contentDescription="@string/try_again_button" android:onClick="onClickTryAgain"/>
     <ImageView
             android:layout_width="200dp"
-            android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button2"
+            android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.956" app:layout_constraintStart_toStartOf="parent"
